--- a/app/src/main/res/layout/activity_organizer_home.xml
+++ b/app/src/main/res/layout/activity_organizer_home.xml
@@ -94,6 +94,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/console_black" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="84dp"
+        tools:layout_editor_absoluteY="132dp" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/new_tournament"
+        tools:layout_editor_absoluteX="42dp"
+        tools:layout_editor_absoluteY="250dp" />
+
     <!-- nav bar ends -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
