--- a/app/src/main/res/layout/activity_tournament_home.xml
+++ b/app/src/main/res/layout/activity_tournament_home.xml
@@ -216,6 +216,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
         android:layout_width="361dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="92dp"
@@ -244,5 +245,15 @@
             android:layout_height="wrap_content"
             android:text="All" />
     </com.google.android.material.tabs.TabLayout>
+
+    <ImageView
+        android:id="@+id/imageView19"
+        android:layout_width="291dp"
+        android:layout_height="439dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/KillConfirmed" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
