fixed gradle build errors

--- a/app/src/main/res/layout/activity_tournament_home.xml
+++ b/app/src/main/res/layout/activity_tournament_home.xml
@@ -254,6 +254,6 @@
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/KillConfirmed" />
+        app:srcCompat="@drawable/killconfirmed" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
