--- a/app/src/main/res/layout/activity_tournament_org_list.xml
+++ b/app/src/main/res/layout/activity_tournament_org_list.xml
@@ -114,7 +114,7 @@
             android:layout_height="162dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="-18dp"
-            app:srcCompat="@drawable/KillConfirmed" />
+            app:srcCompat="@drawable/killconfirmed" />
 
     </androidx.cardview.widget.CardView>
 
