--- a/app/src/main/res/layout/activity_game_update.xml
+++ b/app/src/main/res/layout/activity_game_update.xml
@@ -12,15 +12,12 @@
         android:layout_width="227dp"
         android:layout_height="38dp"
         android:layout_marginStart="66dp"
-        android:layout_marginEnd="100dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:hint="Name"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/textView5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar2"
@@ -35,26 +32,11 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
-        android:layout_width="227dp"
-        android:layout_height="38dp"
-        android:layout_marginStart="66dp"
-        android:layout_marginEnd="100dp"
-        android:layout_marginBottom="12dp"
-        android:ems="10"
-        android:hint="Name"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/textView5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <EditText
         android:id="@+id/key_region"
         android:layout_width="229dp"
         android:layout_height="38dp"
         android:layout_marginStart="68dp"
-        android:layout_marginTop="356dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:hint="@string/key_region"
         android:inputType="textPersonName"
@@ -66,10 +48,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="68dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginTop="13dp"
         android:text="Enter the region"
-        app:layout_constraintBottom_toTopOf="@+id/key_region"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName8" />
 
     <EditText
         android:id="@+id/descript_key"
@@ -89,9 +71,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="66dp"
         android:layout_marginTop="12dp"
-        android:layout_marginBottom="12dp"
-        android:text="Description"
-        app:layout_constraintBottom_toTopOf="@+id/descript_key"
+        android:text="@string/update_des"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/key_region" />
 
@@ -99,26 +79,21 @@
         android:id="@+id/min_tm_key"
         android:layout_width="230dp"
         android:layout_height="39dp"
-        android:layout_marginStart="66dp"
-        android:layout_marginEnd="97dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginStart="65dp"
+        android:layout_marginTop="10dp"
         android:ems="10"
         android:hint="Min Teams"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/max_tm"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/min_key" />
 
     <TextView
         android:id="@+id/min_key"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="66dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginBottom="12dp"
-        android:text="Min Teams"
-        app:layout_constraintBottom_toTopOf="@+id/min_tm_key"
+        android:layout_marginTop="13dp"
+        android:text="@string/update_minteams"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/descript_key" />
 
@@ -127,35 +102,30 @@
         android:layout_width="236dp"
         android:layout_height="39dp"
         android:layout_marginStart="66dp"
-        android:layout_marginEnd="91dp"
+        android:layout_marginTop="13dp"
         android:ems="10"
         android:hint="Max Teams"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.111"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="413dp" />
+        app:layout_constraintTop_toBottomOf="@+id/max_tm" />
 
     <TextView
         android:id="@+id/max_tm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="66dp"
-        android:layout_marginBottom="12dp"
-        android:text="Max Teams"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName5"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="13dp"
+        android:text="@string/update_maxteams"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/min_tm_key" />
 
     <TextView
         android:id="@+id/create_heading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="66dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="286dp"
-        android:text="Update"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="15dp"
+        android:text="@string/update_heading"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -164,51 +134,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="66dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginTop="18dp"
         android:text="Enter the name"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/create_heading" />
 
     <Button
         android:id="@+id/update_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Update"
-        tools:layout_editor_absoluteX="66dp"
-        tools:layout_editor_absoluteY="475dp" />
+        android:layout_marginStart="66dp"
+        android:layout_marginTop="24dp"
+        android:text="@string/user_Update"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />
 
     <Button
         android:id="@+id/cancle_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cancle"
-        tools:layout_editor_absoluteX="230dp"
-        tools:layout_editor_absoluteY="474dp" />
-
-    <TextView
-        android:id="@+id/enter_name_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Enter the name of the game"
-        tools:layout_editor_absoluteX="68dp"
-        tools:layout_editor_absoluteY="44dp" />
-
-    <TextView
-        android:id="@+id/enter_region"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Enter the region"
-        tools:layout_editor_absoluteX="68dp"
-        tools:layout_editor_absoluteY="135dp" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName11"
-        android:layout_width="234dp"
-        android:layout_height="40dp"
-        android:ems="10"
-        android:hint="@string/game_name"
-        android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="66dp"
-        tools:layout_editor_absoluteY="77dp" />
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="23dp"
+        android:text="@string/user_Cancle"
+        app:layout_constraintStart_toEndOf="@+id/update_button"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
