--- a/app/src/main/res/layout/activity_game_user_gamelist.xml
+++ b/app/src/main/res/layout/activity_game_user_gamelist.xml
@@ -4,101 +4,276 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".player_game">
+    tools:context=".game_user_gamelist">
+
+
+    <!-- nav bar -->
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="394dp"
+        android:layout_height="57dp"
+        android:background="#424242"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="1dp"
+        android:text="Games"
+        android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/descript"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="338dp"
+        android:layout_marginBottom="1dp"
+        android:text="Player"
+        android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/ID_tournament"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="76dp"
+        android:layout_marginBottom="1dp"
+        android:text="Tournaments"
+        android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="258dp"
+        android:layout_marginBottom="1dp"
+        android:text="Teams"
+        android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="182dp"
+        android:layout_marginBottom="1dp"
+        android:text="Home"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="32dp"
+        android:layout_height="27dp"
+        android:layout_marginStart="183dp"
+        android:layout_marginBottom="24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/homewhite" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="33dp"
+        android:layout_height="27dp"
+        android:layout_marginEnd="260dp"
+        android:layout_marginBottom="23dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/cup_black" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="30dp"
+        android:layout_height="27dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="23dp"
+        app:layout_constraintBottom_toBottomOf="@+id/descript"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/rank_black" />
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="32dp"
+        android:layout_height="27dp"
+        android:layout_marginEnd="41dp"
+        android:layout_marginBottom="22dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/descript"
+        app:srcCompat="@drawable/team_black" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="39dp"
+        android:layout_height="29dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginBottom="2dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/console_black" />
+
+    <!-- nav bar ends -->
 
     <TextView
         android:id="@+id/textView16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Player"
-        tools:layout_editor_absoluteX="47dp"
-        tools:layout_editor_absoluteY="37dp" />
+        android:layout_marginStart="47dp"
+        android:layout_marginTop="36dp"
+        android:text="@string/user_player"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView17"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Stats"
-        tools:layout_editor_absoluteX="48dp"
-        tools:layout_editor_absoluteY="74dp" />
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="19dp"
+        android:text="@string/user_Stats"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
     <TextView
         android:id="@+id/textView18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="My Games"
-        tools:layout_editor_absoluteX="113dp"
-        tools:layout_editor_absoluteY="75dp" />
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="75dp"
+        android:text="@string/user_mygames"
+        app:layout_constraintStart_toEndOf="@+id/textView17"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tournaments"
-        tools:layout_editor_absoluteX="204dp"
-        tools:layout_editor_absoluteY="75dp" />
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="75dp"
+        android:text="@string/user_tournaments"
+        app:layout_constraintStart_toEndOf="@+id/textView18"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Player Info"
-        tools:layout_editor_absoluteX="315dp"
-        tools:layout_editor_absoluteY="75dp" />
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="75dp"
+        android:text="@string/user_playerinfo"
+        app:layout_constraintStart_toEndOf="@+id/textView19"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView21"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Subscribed games -13"
-        tools:layout_editor_absoluteX="49dp"
-        tools:layout_editor_absoluteY="111dp" />
+        android:layout_marginStart="49dp"
+        android:layout_marginTop="17dp"
+        android:text="@string/user_subsgame"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView18" />
 
     <TextView
         android:id="@+id/textView22"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Mobile Legends"
-        tools:layout_editor_absoluteX="166dp"
-        tools:layout_editor_absoluteY="160dp" />
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="46dp"
+        android:text="@string/user_Mobile_legends"
+        app:layout_constraintStart_toEndOf="@+id/imageView18"
+        app:layout_constraintTop_toBottomOf="@+id/textView21" />
 
     <Button
         android:id="@+id/button9"
         android:layout_width="143dp"
         android:layout_height="35dp"
-        android:text="Unsubscribe"
-        tools:layout_editor_absoluteX="166dp"
-        tools:layout_editor_absoluteY="192dp" />
+        android:layout_marginTop="17dp"
+        android:text="@string/user_Unsubscribe"
+        app:layout_constraintStart_toEndOf="@+id/imageView18"
+        app:layout_constraintTop_toBottomOf="@+id/textView22" />
 
     <Button
         android:id="@+id/button10"
         android:layout_width="143dp"
         android:layout_height="35dp"
-        android:text="Unsubscribe"
-        tools:layout_editor_absoluteX="166dp"
-        tools:layout_editor_absoluteY="295dp" />
+        android:layout_marginStart="9dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/user_Unsubscribe"
+        app:layout_constraintStart_toEndOf="@+id/imageView17"
+        app:layout_constraintTop_toBottomOf="@+id/textView23" />
 
     <Button
         android:id="@+id/button11"
         android:layout_width="143dp"
         android:layout_height="35dp"
-        android:text="Unsubscribe"
-        tools:layout_editor_absoluteX="166dp"
-        tools:layout_editor_absoluteY="397dp" />
+        android:layout_marginTop="21dp"
+        android:layout_marginEnd="84dp"
+        android:text="@string/user_Unsubscribe1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView24" />
 
     <TextView
         android:id="@+id/textView23"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Valorant"
-        tools:layout_editor_absoluteX="166dp"
-        tools:layout_editor_absoluteY="261dp" />
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="32dp"
+        android:text="@string/user_Valorant"
+        app:layout_constraintStart_toEndOf="@+id/imageView17"
+        app:layout_constraintTop_toBottomOf="@+id/button9" />
 
     <TextView
         android:id="@+id/textView24"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tom Clansys's R6"
-        tools:layout_editor_absoluteX="166dp"
-        tools:layout_editor_absoluteY="361dp" />
+        android:layout_marginTop="59dp"
+        android:layout_marginEnd="116dp"
+        android:text="@string/user_TomCl"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button10" />
+
+    <ImageView
+        android:id="@+id/imageView17"
+        android:layout_width="153dp"
+        android:layout_height="83dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        android:src="@drawable/valorant6"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView18" />
+
+    <ImageView
+        android:id="@+id/imageView18"
+        android:layout_width="167dp"
+        android:layout_height="132dp"
+        android:src="@drawable/mbl"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView21" />
+
+    <ImageView
+        android:id="@+id/imageView20"
+        android:layout_width="131dp"
+        android:layout_height="118dp"
+        android:layout_marginTop="17dp"
+        android:layout_marginEnd="19dp"
+        android:src="@drawable/tom123"
+        app:layout_constraintEnd_toStartOf="@+id/button11"
+        app:layout_constraintTop_toBottomOf="@+id/imageView17"
+        app:srcCompat="@drawable/tom123" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
